@@ -1,3 +1,10 @@
+Sun Jan 25 23:47:06 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/logging/server/Logging_Server.cpp:
+        * cuts/utils/testing/svcs/logging/Test_Logging_Service.cpp:
+
+          . Added more debug messages.
+
 Sun Jan 25 23:09:55 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/workers/Test_Logger/Test_Logger_i.cpp:
